@@ -20,7 +20,6 @@ NEWS                    News for this release (for some meaning of "this")
 NEWS.help               How to edit NEWS
 Porting                 Mini-FAQ on porting to new platforms
 PURIFY.README           Information for Purify users
-pymemcompat.h           Memory interface compatibility file.
 python-config.in        Python script template for python-config
 python.man              UNIX man page for the python interpreter
 python-mode.el          Emacs mode for editing Python programs
@@ -31,9 +30,7 @@ README.coverity         Information about running Coverity's Prevent on Python
 README.klocwork         Information about running Klocwork's K7 on Python
 README.OpenBSD          Help for building problems on OpenBSD
 README.valgrind         Information for Valgrind users, see valgrind-python.supp
-RFD                     Request For Discussion about a Python newsgroup
 RPM                     (Old) tools to build RPMs
-setuid-prog.c           C helper program for set-uid Python scripts
 SpecialBuilds.txt       Describes extra symbols you can set for debug builds
 TextMate                A TextMate bundle for Python development
 valgrind-python.supp    Valgrind suppression file, see README.valgrind
